--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
         # перейти в папку, содержащую manage.py — 
         #<корневая_папка_infra_actions>/<папка_проекта>/manage.py
         cd infra_project/
-        # запустить написанные разработчиком тесты
+        # запустить написанные разработчиком тест
         python manage.py test
 
   build_and_push_to_docker_hub:
@@ -54,4 +54,4 @@ jobs:
         uses: docker/build-push-action@v2 
         with:
           push: true
-          tags: ваш-логин-на-docker-hub/ваш-репозиторий-на-docker-hub:latest 
+          tags: netroll/infra_action:latest 
